--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://localhost:3000/assets/style.css">
-    <title>Facebook</title>
+    <title>Faisbook</title>
   </head>
   <body>
     <div id="root"></div>
